add players and register and leagues pages

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "motion": "^12.18.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-router-dom": "^7.6.1",
     "sweetalert2": "^11.22.0",
     "sweetalert2-react-content": "^5.1.0"
