--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
     "bootstrap": "^5.3.6",
+    "firebase": "^11.10.0",
     "luxon": "^3.6.1",
     "motion": "^12.18.1",
     "react": "^19.1.0",
